# identification_sequence_number

./: .gitignore  CMakeLists.txt  CameraThread.cpp  CameraThread.h  Detection.cpp  Detection.h  DeviceManager.cpp  DeviceManager.h  LogManager.cpp  LogManager.h  MainWindow.cpp  MainWindow.h  Readme.md  UplodMes.h  analogkeyboard.sh  build.sh  camera.py  config.ini  config.txt  detector.py  device_manager.py  log_manager.py  main.py  ui_components.py
